[package]
name = "acc_compiler"
version = "0.1.0"
authors = ["Alex Do <alexxdo2004@gmail.com>"]
description = "acc compiler library"
homepage = "https://github.com/a1exxd0/acc"
repository = "https://github.com/a1exxd0/acc"
readme = "README.md"
license = "MIT"
edition = "2021"
exclude = [".github"]

[lib]
name = "acc_compiler"
path="src/lib.rs"

[features]

[dependencies]
once_cell = "1.20.2"

[build-dependencies]

[dev-dependencies]

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false

[profile.release]
opt-level = 3
debug = false
overflow-checks = false
lto = true
strip = true
codegen-units = 1
panic = "abort"